--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1539,7 +1539,7 @@ p {
 }
 
 .bg-overlay {
-  background-color: rgba(60, 72, 88, 0.7);
+  background-color: rgba(255, 255, 255, 0.7);
   position: absolute;
   top: 0;
   right: 0;
@@ -1564,16 +1564,22 @@ p {
 }
 
 .title-heading {
-  line-height: 26px;
+  line-height: 28px;
 }
 
-.title-heading .heading {
+.title-heading {
   font-size: 45px;
   letter-spacing: 1px;
 }
 
+.heading {
+  font-size: 48px;
+  letter-spacing: 1px;
+}
+
 .title-heading .para-desc {
-  font-size: 18px;
+  font-size: 20px;
+  font-weight: 500;
 }
 
 .section-title {
@@ -1592,6 +1598,27 @@ p {
 .para-desc {
   max-width: 600px;
 }
+
+.mt-6 {
+  margin-top: 60px;
+}
+
+.margin-top-60 {
+  margin-top: 60px;
+}
+
+.mt-60 {
+  margin-top: 60px;
+}
+
+.mt-80 {
+  margin-top: 80px;
+}
+
+.margin-top-80 {
+  margin-top: 80px;
+}
+
 
 .mt-100 {
   margin-top: 100px;
