--- a/src/css/style.css
+++ b/src/css/style.css
@@ -27,7 +27,7 @@
  *     17.  Contact              *
  *     18.  Footer               *
  ================================*/
-@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
+@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,700,700i,900");
 .bg-primary {
   background-color: #5dbcd2 !important;
 }
@@ -1502,15 +1502,39 @@ button:not(:disabled) {
   }
 }
 
+svg {
+    margin-bottom: -0.4375rem;
+    vertical-align: baseline;
+}
+svg {
+    overflow: hidden;
+    vertical-align: middle;
+}
+    
+figure {
+    margin-bottom: 0;
+}
+figure {
+    margin: 0 0 1rem;
+}
+
+html {
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+    font-family: fa5-proxima-nova,"Helvetica Neue",Helvetica,Arial,sans-serif;
+}
 body {
-  font-family: 'Ubuntu', sans-serif;
+    font-family: fa5-proxima-nova,"Helvetica Neue",Helvetica,Arial,sans-serif!important;
   overflow-x: hidden !important;
   font-size: 16px;
   color: #161c2d;
 }
 
+h1, .h1 {
+    font-size: 3.275rem;
+   }
+
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
-  font-family: 'Ubuntu', sans-serif;
+  font-family: fa5-proxima-nova,"Helvetica Neue",Helvetica,Arial,sans-serif;
   line-height: 1.5;
   font-weight: 600;
 }
