--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
 /* App Name: Elektropay
    Author: EverPay
-   E-mail: everpay@gmail.com
+   E-mail: richard.r@everpayinc.com
    Version: 2.1.0
    Created: May 2020
    File Description: Main Css file of the template
