--- a/src/css/style.css
+++ b/src/css/style.css
@@ -143,8 +143,15 @@ a.text-light:hover, a.text-light:focus {
 .text-footer {
   color: #202942 !important;
 }
-
+.text-copyright {
+  color: #202942 !important;
+}
 a.text-footer:hover, a.text-footer:focus {
+  color: #181e30 !important;
+}
+
+
+a.text-copyright:hover, a.text-copyright:focus {
   color: #181e30 !important;
 }
 
@@ -154,7 +161,7 @@ a.text-footer:hover, a.text-footer:focus {
 }
 
 .rounded {
-  border-radius: 10px !important;
+  border-radius: 15px !important;
 }
 
 .rounded-top {
