--- a/src/scss/_bootstrap-custom.scss
+++ b/src/scss/_bootstrap-custom.scss
@@ -67,4 +67,8 @@ $value in $colors {
 //Small
 .small, small {
     font-size: 90%;
+.x-small, x-small {
+    font-size: 80%;
+ .xx-small, xx-small {
+    font-size: 70%;   
 }
