--- a/src/css/style.css
+++ b/src/css/style.css
@@ -203,7 +203,14 @@ a.text-copyright:hover, a.text-copyright:focus {
 }
 
 .small, small {
-  font-size: 90%;
+  font-size: 90%; 
+}
+
+.x-small, x-small {
+    font-size: 80%;
+}
+.xx-small, xx-small {
+    font-size: 70%;
 }
 
 .component-wrapper .title {
