--- a/src/Apps.scss
+++ b/src/Apps.scss
@@ -1,5 +1,6 @@
 @import '../node_modules/bootstrap/scss/bootstrap.scss';
 @import "./scss/custom.scss";
+@import "./scss/_cookie-policy-banner.scss";
 
 //Import Light mode
 @import './scss/style.scss';
