--- a/src/css/style.css
+++ b/src/css/style.css
@@ -32,7 +32,7 @@
   background-color: #5dbcd2!important;
 }
 .bg-black {
-  background-color: #202942!important;
+  background-color: #32393e !important;
 }
 .text-primary {
   color: #5dbcd2 !important;
