--- a/src/scss/_bootstrap-custom.scss
+++ b/src/scss/_bootstrap-custom.scss
@@ -66,6 +66,12 @@ $value in $colors {
 
 //Small
 .small, small {
-    font-size: 90%;
+    font-size: 90%;  
+}
+.x-small, x-small {
+    font-size: 80%;
+}
+.xx-small, xx-small {
+    font-size: 70%;
     
 }
