--- a/src/scss/_bootstrap-custom.scss
+++ b/src/scss/_bootstrap-custom.scss
@@ -65,13 +65,13 @@ $value in $colors {
 }
 
 //Small
-.small, small {
+.small {
     font-size: 90%;  
 }
-.x-small, x-small {
+.x-small {
     font-size: 80%;
 }
-.xx-small, xx-small {
+.xx-small {
     font-size: 70%;
     
 }
