--- a/src/css/colors/default.css
+++ b/src/css/colors/default.css
@@ -120,8 +120,8 @@
 .btn-primary:active, 
 .btn-primary.active, 
 .btn-primary.focus {
-    background-color: #2443ac !important;
-    border-color: #2443ac !important;
+    background-color: #5fafc7 !important;
+    border-color: #5fafc7 !important;
 }
 
 .alert-primary,
@@ -131,11 +131,11 @@
 }
 
 .alert-primary .alert-link {
-    color: #122258;
+    color: #72CBE6;
 }
 
 .pagination li a:hover {
-    border-color: #4466d8;
+    border-color: #5fafc7;
 }
 
 a.text-primary:hover, 
@@ -181,7 +181,7 @@ a.text-primary:focus {
 }
 
 .event-schedule .date .day {
-    background: rgba(47, 85, 212, 0.1);
+    background: rgba(144, 211, 230, 1);
     box-shadow: 0px 0px 2px 0.25px rgba(110, 202, 228, 1);
 }
 
@@ -195,5 +195,5 @@ a.text-primary:focus {
 }
 
 .nav-pills .nav-link:hover {
-    background: rgba(47, 85, 212, 0.06);
+    background: rgba(95, 175, 195, 1);
 }
