--- a/src/scss/_menu.scss
+++ b/src/scss/_menu.scss
@@ -139,12 +139,12 @@
             > a {
                 display: block;
                 color: $dark;
-                font-size: 13px;
+                font-size: 16px;
                 background-color: transparent !important;
-                font-weight: 700;
+                font-weight: 400;
                 letter-spacing: 1px;
                 line-height: 24px;
-                text-transform: uppercase;
+                text-transform: none;
                 transition: all 0.5s;    
                 font-family: $font-family-base;
                 padding-left: 15px;
