--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1630,7 +1630,7 @@ p {
 }
 
 .title-heading .heading {
-    font-size: 3.3rem;
+    font-size: 3.3rem !important;
     letter-spacing: 1px;
     font-weight: 700;
     line-height: 1;
@@ -1930,13 +1930,13 @@ margin-top: -4px;
 
 #topnav .navigation-menu > li > a {
   display: block;
-  color: #3c4858;
-  font-size: 13px;
+  color: #7e8b96;
+  font-size: 16px;
   background-color: transparent !important;
-  font-weight: 700;
+  font-weight: 500;
   letter-spacing: 1px;
   line-height: 24px;
-  text-transform: uppercase;
+  text-transform: none;
   -webkit-transition: all 0.5s;
   transition: all 0.5s;
   font-family: "Nunito", sans-serif;
