--- a/src/scss/_helper.scss
+++ b/src/scss/_helper.scss
@@ -33,9 +33,9 @@
 }
 //Title
 .title-heading {
-    line-height: 26px;
+    line-height: 28px;
     .heading {
-        font-size: 45px;
+        font-size: 3.3rem;
         letter-spacing: 1px;
     }
     .para-desc {
@@ -46,7 +46,7 @@
     position: relative;
     .title {
         letter-spacing: 0.5px;
-        font-size: 30px;
+        font-size: 2.65rem;
     }
 } 
 .text-shadow-title {
