--- a/src/scss/_helper.scss
+++ b/src/scss/_helper.scss
@@ -37,6 +37,8 @@
     .heading {
         font-size: 3.3rem;
         letter-spacing: 1px;
+        line-height: 55px;
+        font-weight: 700;
     }
     .para-desc {
         font-size: 18px;
